samples/errors/list-member-types-not-same.stkn
func x(y)
    return y * y

write([x(100), false])
write([x(10.0), true])
